
  * Added lyricsplugin.com as lyrics search engine
  * Added a playcount listbox to filter in library tab
  * Added a rating listbox to filter in library tab
  * Added a year listbox to filter in library tab
  * Added File Browser. You can navigate throught your files and play them
    directly from guayadeque.
  * Now the lyrics can be saved to a directory you can configure from preferences -> lyrics
  * Changed the close buttons of the panes
  * Added search text for player playlist
  * Now allow to load from command line directories.
  * Now when loading the library if title is empty will be used the filename. 
    If album is empty will be used the dir name. 
    If Genre or Artist is empty 'Unknown' will be used.
  * Fixed Playlists. Now dynamic playlists are loaded more quickly.
  * Added in Preferences -> Playback the option to add in random mode albums 
    instead of tracks.
  * Added two buttons in preferences to order the cover words
  * The covers are now saved with the first word to detect covers
  * Added in last.fm panel the posibility to search for tracks in library
  * The splash shows the revision number
  * Double click over the track title selects the track
  * Updated the no cover image. Thanks mrmotinjo
  * Fix parsing podcasts that contains comments before the channel tag

2010-03-12 0.2.5

  * Fix set volumen on loading when was muted
  * Fix Downloading files when redirected using 'location:' in lower case
  * Fixed when edit the track currently playing the cover dont show anymore
  * Added german translation
  * If playlist is empty and player is not playing enqueue tracks starts
    playing the added tracks
  * Add configuration option to hide close button. You need to add entry in
    the conf file ~/.guayadeque/guayadeque.conf
    [General]
    ShowPaneCloseButton=0
  * The current played track appears in app title
  * Fix player labels with & char
  * Fix drag and drop items in playlist under fedora