@@ -1,4 +1,5 @@
 
+  * Fixed mpris Pause/Play interface
   * Added lyricsplugin.com as lyrics search engine
   * Added a playcount listbox to filter in library tab
   * Added a rating listbox to filter in library tab
